@@ -1,6 +1,10 @@
+2001-11-xx - v0.15.2:
+  * Fix -df with filenames that begin or end in "non-word" chars since the \< and \> will not match because there is no word boundry in such a case. (reported by Bernhard Josef Rieder)
+
 2001-11-07 - v0.15.1:
   * Fix linking when there is no libtermcap but there is curses or ncurses. (Reported by Erik-Jan Vlieger)
   * Fix hang after fatal error on article retrieval. (Reported by Lance Simmons)
+
 2001-11-01 - v0.15:
   * Fixes for gcc 3.0 compilation.
   * Print time remaining in XhXXmXXs format, rather than XXXXs.
